# blocks

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
resources/shaders/: background.frag  background.vert  base.frag  base.vert  basic.frag  basic.vert  fxaa.frag  fxaa.vert  lightdepth.frag  lightdepth.vert  lighting.frag  lightpos.vert  shadowmap.vert  skybox.frag  skybox.vert  zpass.frag
shaders/: base.frag  basic.frag  basic.vert  zpass.vert
src/: app.cpp  app.h  block.h  camera.cpp  camera.h  cameracontroller.cpp  cameracontroller.h  data.h  editor.cpp  editor.h  game.cpp  game.h  inputmanager.cpp  inputmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  objserializer.cpp  objserializer.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  resources.qrc  scene.h  serializer.h  style.h  viewport.cpp  viewport.h  voxel.h
src/app/: app.cpp  app.h  camera.h  cameracontroller.cpp  cameracontroller.h  editor.cpp  main.cpp  menu.h  renderer.cpp  renderer.h  renderpass.h  scene.cpp  serializer.h  style.h  voxel.cpp  voxel.h
src/core/: assetmanager.cpp  assetmanager.h  camera.cpp  camera.h  enginewidget.cpp  enginewidget.h  entity.cpp  entity.h  gameenginewidget.cpp  gameenginewidget.h  graphicscomponent.h  graphicscomponents.cpp  graphicscomponents.h  renderer.cpp  renderer.h  scene.cpp  scene.h
src/shaders/: basic.frag
src/styles/: menu.qss  style_template.h.in
styles/: menu.qss  style_template.h.in
